# dark-send

./: .gitignore  FastTelethon.py  README  README.md  config.py  dark  dark-send  dark-send.service  dark_send.nix  default.nix  flake.nix  inquirer.py  meta_data.py  module.nix  progress_bar.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-publish.yml
src/dark_send/: cli.py  concurrent_upload.py  config.py  core.py  daemon.py  inquirer.py  meta_data.py  progress_bar.py
