[project]
name = "dark-send"
version = "1.2.0"
description = "A CLI Telegram client written in python"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "hachoir>=3.3.0",
    "inquirerpy>=0.3.4",
    "telethon>=1.43.2",
    "tqdm>=4.67.3",
]

[build-system] 
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta" 

[project.scripts] 
dark-send = "dark_send.cli:entrypoint"
